coming close to a point where working on this will be a breeze IMO.

--- a/Themes/themekit/metrics.ini
+++ b/Themes/themekit/metrics.ini
@@ -12,29 +12,39 @@ CreditsP2Y=SCREEN_BOTTOM-4
 CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,ColorLightTone( PlayerColor(PLAYER_2) );strokecolor,Color("Black");
 [ScreenWithMenuElements]
 # Header ( Top of Screen )
+# Header 'Height' is 48px
 ShowHeader=true
 HeaderX=SCREEN_CENTER_X
-HeaderY=SCREEN_TOP
+HeaderY=SCREEN_TOP+4
 HeaderOnCommand=vertalign,top;addy,-64;decelerate,0.35;addy,64;
 HeaderOffCommand=
 # Text Header ( Text displayed at top of screen on top of header )
 ShowTextHeader=true
 TextHeaderX=SCREEN_CENTER_X-256-32
-TextHeaderY=SCREEN_TOP+32+8-1.5
+TextHeaderY=SCREEN_TOP+32+8+4-1.5
 TextHeaderOnCommand=horizalign,left;vertalign,bottom;skewx,-0.125;shadowlength,1;diffusealpha,0;addx,-16;sleep,0.35;decelerate,0.125;diffusealpha,1;addx,16;
 TextHeaderOffCommand=
 # Footer ( Bottom Of Screen )
+# Footer 'Height' is 64px
 ShowFooter=true
 FooterX=SCREEN_CENTER_X
-FooterY=SCREEN_BOTTOM
+FooterY=SCREEN_BOTTOM-32
 FooterOnCommand=vertalign,bottom;addy,48;decelerate,0.35;addy,-48
 FooterOffCommand=
 # Menu Timer
 TimerX=SCREEN_CENTER_X+256+32
-TimerY=SCREEN_TOP+32+8-1.5
+TimerY=SCREEN_TOP+32+8+4-1.5
 # We animate the timer in [MenuTimer], since diffusion doesn't work here.
 TimerOnCommand=
 TimerOffCommand=
+# Help Text
+ShowHelpDisplay=true
+HelpDisplayX=SCREEN_CENTER_X
+HelpDisplayY=SCREEN_BOTTOM-32-16
+HelpDisplayOnCommand=SetSecsBetweenSwitches,4;shadowlength,1;draworder,105;zoom,0.675;maxwidth,640/0.675;
+HelpDisplayOffCommand=linear,0.175;zoomy,0
+[HelpDisplay]
+TipShowTime=4
 [MenuTimer]
 # Text associated with the menutimer
 Text1OnCommand=stopeffect;stoptweening;horizalign,right;vertalign,bottom;shadowlength,1;diffusealpha,0;x,16;sleep,0.35;decelerate,0.125;diffusealpha,1;x,0;
@@ -279,20 +289,29 @@ IconChoiceEndlessDisabledCommand=diffuse,color("1,0,0,0.5");
 IconChoiceEndlessOffUnfocusedCommand=linear,0.1175;zoomx,0
 IconChoiceEndlessOffFocusedCommand=stopeffect;sleep,0
 [ScreenSelectMusic]
+BannerX=SCREEN_CENTER_X-128-32
+BannerY=SCREEN_TOP+128-8
+BannerOnCommand=scaletoclipped,256,80
+BannerOffCommand=
+#
+MusicWheelX=SCREEN_CENTER_X+128+64
+MusicWheelY=SCREEN_CENTER_Y
+MusicWheelOnCommand=draworder,-1
+MusicWheelOffCommand=
+#
+
+#
 ShowStepsDisplayP1=true
-StepsDisplayP1X=SCREEN_CENTER_X-192
-StepsDisplayP1Y=SCREEN_BOTTOM-64
+StepsDisplayP1X=SCREEN_CENTER_X-128-32
+StepsDisplayP1Y=SCREEN_BOTTOM-64-16
 StepsDisplayP1OnCommand=
 StepsDisplayP1OffCommand=
 #
 ShowStepsDisplayP2=true
-StepsDisplayP2X=SCREEN_CENTER_X-192
-StepsDisplayP2Y=SCREEN_BOTTOM-64
+StepsDisplayP2X=SCREEN_CENTER_X+128+32
+StepsDisplayP2Y=SCREEN_BOTTOM-64-16
 StepsDisplayP2OnCommand=
 StepsDisplayP2OffCommand=
-#
-MusicWheelX=SCREEN_RIGHT-128-18
-MusicWheelOnCommand=draworder,-1
 [MusicWheel]
 HighlightOnCommand=blend,Blend.Add;diffuseramp;effectclock,'beatnooffset'
 #
