Linux compiles again. Needs help linking.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -603,7 +603,8 @@ libtomcrypt_a_CPPFLAGS = -I$(srcdir)/libtomcrypt/src/headers $(AM_CPPFLAGS)
 
 noinst_LIBRARIES += libtomcrypt.a
 
-main_CPPFLAGS = -I$(top_srcdir)/extern/jsoncpp/include
+main_CPPFLAGS = -I$(top_srcdir)/extern/jsoncpp/include \
+-I$(top_srcdir)/extern/glew-1.5.8/include
 
 main_SOURCES = $(PNG) \
 		$(Screens) \
@@ -624,7 +625,8 @@ main_LDADD = \
 		  libtomcrypt.a libtommath.a
 
 nodist_stepmania_SOURCES = ver.cpp
-stepmania_CPPFLAGS = -I$(top_srcdir)/extern/jsoncpp/include
+
+stepmania_CPPFLAGS = $(main_CPPFLAGS)
 stepmania_SOURCES = $(main_SOURCES)
 stepmania_LDADD = $(main_LDADD)
 
