[splittiming] - #include "global.h" in SongPosition.cpp to make it build in MSVC. - Add SongPosition.cpp to VC2008 project.

--- a/src/StepMania-net2008.vcproj
+++ b/src/StepMania-net2008.vcproj
@@ -1445,6 +1445,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\SongPosition.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\SongPosition.h"
+				>
+			</File>
+			<File
 				RelativePath="SongUtil.cpp"
 				>
 			</File>
