Attempted default noteskin fake fix.
Am I the only one that isn't getting the desired results?

--- a/NoteSkins/dance/default/metrics.ini
+++ b/NoteSkins/dance/default/metrics.ini
@@ -8,6 +8,7 @@ TapNoteAnimationLength=1 // none of these matter because Lua is handling the ani
 TapAdditionAnimationLength=1
 TapMineAnimationLength=1
 TapLiftAnimationLength=1
+TapFakeAnimationLength=1
 HoldHeadAnimationLength=1
 HoldTopCapAnimationLength=1
 HoldBottomCapAnimationLength=1
@@ -30,6 +31,8 @@ TapNoteAdditionTextureCoordOffsetX=0
 TapNoteAdditionTextureCoordOffsetY=0
 TapNoteNoteColorTextureCoordSpacingX=0
 TapNoteNoteColorTextureCoordSpacingY=.125
+TapFakeNoteColorTextureCoordSpacingX=0
+TapFakeNoteColorTextureCoordSpacingY=.125
 HoldHeadNoteColorTextureCoordSpacingX=0
 HoldHeadNoteColorTextureCoordSpacingY=.125
 
