[splittiming] Minor typo.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3627,7 +3627,7 @@ NumHandsFormat="%s: %d\n"
 NumRollsFormat="%s: %d\n"
 NumLiftsFormat="%s: %d\n"
 NumFakesFormat="%s: %d\n"
-TimingModeFormat="%:\n  %s\n"
+TimingModeFormat="%s:\n  %s\n"
 Beat0OffsetFormat="%s:\n  %.5f secs\n"
 PreviewStartFormat="%s:\n  %.5f secs\n"
 PreviewLengthFormat="%s:\n  %.5f secs\n"
