[MusicWheel] Added ShowSectionsInBPMSort and ShowSectionsInLengthSort metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -857,7 +857,9 @@ ShowRoulette=true
 ShowRandom=false
 ShowPortal=false
 
+ShowSectionsInBPMSort=true
 SortBPMDivision=20
+ShowSectionsInLengthSort=true
 SortLengthDivision=5
 
 MostPlayedSongsToShow=30
