[Banner] Added ScrollMode and ScrollSortOrder metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -220,6 +220,8 @@ BottomEdge=SCREEN_BOTTOM
 # Scroll stuff when you roll over it, DDR Extreme style.
 ScrollRandom=false
 ScrollRoulette=false
+ScrollMode=false
+ScrollScrollOrder=false
 # Control how fast the banner scrolls. Higher numbers mean slower.
 ScrollSpeedDivisor=2
 
