--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -221,7 +221,7 @@ BottomEdge=SCREEN_BOTTOM
 ScrollRandom=false
 ScrollRoulette=false
 ScrollMode=false
-ScrollScrollOrder=false
+ScrollSortOrder=false
 # Control how fast the banner scrolls. Higher numbers mean slower.
 ScrollSpeedDivisor=2
 
