--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1286,6 +1286,7 @@ TicksSetCommand=
 #
 ShowMeter=false
 ZeroMeterString="0"
+MeterFormatString="%i"
 MeterX=0
 MeterY=0
 MeterOnCommand=
@@ -2009,6 +2010,7 @@ TicksOnCommand=shadowlength,0;
 TicksSetCommand=%function(self,param) self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)) if param.Meter > 9 then self:glowshift() else self:stopeffect() end end
 ShowTicks=false
 ShowMeter=true
+MeterFormatString="%i"
 ZeroMeterString="?"
 MeterX=30
 MeterY=0
