[ModIcon] Added StopWords metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4036,6 +4036,7 @@ TextX=0
 TextY=0
 TextOnCommand=maxwidth,40;uppercase,true;shadowlength,0;diffuse,color("#f6ff00")
 CropTextToWidth=50
+StopWords="1X,default,Overhead,Off"
 
 [ModIconSelectMusic]
 Fallback="ModIcon"
