[ScreenGameplay] Removed hardcoded commands for Debug (give up text) and replace them with DebugStartOnCommand, DebugBackOnCommand, and DebugTweenOffCommand.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3211,6 +3211,9 @@ SongOptionsOffCommand=
 DebugX=SCREEN_CENTER_X
 DebugY=SCREEN_BOTTOM-72
 DebugOnCommand=zoom,0.75
+DebugStartOnCommand=stoptweening;diffusealpha,0;linear,1/8;diffusealpha,1
+DebugBackOnCommand=stoptweening;diffusealpha,0;linear,1/8;diffusealpha,1
+DebugTweenOffCommand=stoptweening;linear,1/8;diffusealpha,0
 #
 SongNumberFormat="%d"
 SongNumberP1X=THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX") - 60
