[splittiming] Display Speeds in Step Timing.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -989,6 +989,7 @@ TimeSignatureColor=color("1,0.55,0,1")
 TickcountColor=color("0,1,0,1")
 ComboColor=color("0.55,1,0,1")
 LabelColor=color("1,0,0,1")
+SpeedColor=color("0.5,1,1,1")
 #
 BPMIsLeftSide=true
 StopIsLeftSide=true
@@ -998,15 +999,17 @@ TimeSignatureIsLeftSide=true
 TickcountIsLeftSide=false
 ComboIsLeftSide=false
 LabelIsLeftSide=false
+SpeedIsLeftSide=false
 #
 BPMOffsetX=60
 StopOffsetX=50
 DelayOffsetX=120
 WarpOffsetX=60
 TimeSignatureOffsetX=30
-TickcountOffsetX=10
-ComboOffsetX=30
-LabelOffsetX=80
+TickcountOffsetX=105
+ComboOffsetX=95
+LabelOffsetX=120
+SpeedOffsetX=30
 
 [PlayerStageStats]
 # Original CVS Grading
