[splittiming] Show fake segments in editor.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -990,6 +990,7 @@ TickcountColor=color("0,1,0,1")
 ComboColor=color("0.55,1,0,1")
 LabelColor=color("1,0,0,1")
 SpeedColor=color("0.5,1,1,1")
+FakeColor=color("1,1,0.5,1")
 #
 BPMIsLeftSide=true
 StopIsLeftSide=true
@@ -1000,6 +1001,7 @@ TickcountIsLeftSide=false
 ComboIsLeftSide=false
 LabelIsLeftSide=false
 SpeedIsLeftSide=false
+FakeIsLeftSide=true
 #
 BPMOffsetX=60
 StopOffsetX=50
@@ -1010,6 +1012,7 @@ TickcountOffsetX=70
 ComboOffsetX=50
 LabelOffsetX=130
 SpeedOffsetX=30
+FakeOffsetX=90
 
 [PlayerStageStats]
 # Original CVS Grading
