Test commit and bot check.
If this file was added to hgignore in error,
please revert.

--- a/.hgignore
+++ b/.hgignore
@@ -82,6 +82,7 @@ Utils/temp*
 BuildLog.htm
 *.pch
 
+.hgrc
 syntax: regexp
 .*\#.*\#$
 glob:Cache/Banners/AdditionalSongs_Airspace Preview_Derailed_Derailed bn.png
