--- a/.hgignore
+++ b/.hgignore
@@ -83,6 +83,8 @@ BuildLog.htm
 *.pch
 
 .hgrc
+src/UpgradeLog*.XML
+src/_UpgradeReport_Files
 syntax: regexp
 .*\#.*\#$
 glob:Cache/Banners/AdditionalSongs_Airspace Preview_Derailed_Derailed bn.png
