[BPMDisplay] Add CourseCycleSpeed metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -252,6 +252,7 @@ Cycle=true
 NoBpmText="000"
 # How fast it cycles, smaller is faster
 RandomCycleSpeed=0.1
+CourseCycleSpeed=0.2
 # Seperator between both bpms ( 100-200 ).
 Separator="-"
 # ??? when it cycles.
